--- a/package.json
+++ b/package.json
@@ -10,8 +10,15 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@primeuix/themes": "^1.2.3",
+    "@tailwindcss/vite": "^4.1.13",
     "nuxt": "^4.1.1",
+    "primevue": "^4.3.9",
+    "tailwindcss": "^4.1.13",
     "vue": "^3.5.21",
     "vue-router": "^4.5.1"
+  },
+  "devDependencies": {
+    "@primevue/nuxt-module": "^4.3.9"
   }
 }
