--- a/package.json
+++ b/package.json
@@ -10,13 +10,16 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@pinia/nuxt": "^0.11.2",
     "@primeuix/themes": "^1.2.3",
     "@tailwindcss/vite": "^4.1.13",
     "nuxt": "^4.1.1",
+    "pinia": "^3.0.3",
     "primevue": "^4.3.9",
     "tailwindcss": "^4.1.13",
     "vue": "^3.5.21",
-    "vue-router": "^4.5.1"
+    "vue-router": "^4.5.1",
+    "zod": "^4.1.8"
   },
   "devDependencies": {
     "@primevue/nuxt-module": "^4.3.9"
