--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "pinia": "^3.0.3",
     "primevue": "^4.3.9",
     "tailwindcss": "^4.1.13",
+    "uuid": "^13.0.0",
     "vue": "^3.5.21",
     "vue-router": "^4.5.1",
     "zod": "^4.1.8"
