--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@pinia/nuxt": "^0.11.2",
     "@primeuix/themes": "^1.2.3",
     "@tailwindcss/vite": "^4.1.13",
+    "marked": "^16.3.0",
     "nuxt": "^4.1.1",
     "pinia": "^3.0.3",
     "primeicons": "^7.0.0",
